correction to links

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
              <h2>Author: Handhwarah Abdu Muhumuza</h2>
              <img src="https://placebear.com/100/100" alt="Ben Bigger The Bear">
              <h3 id="last-posted">Last Posted: 01-08-2024</h3>
-             <a href="https://www.brightnetwork.co.uk" target="_blank">Author's Profile</a>
+             <a href="https://www.linkedin.com/in/handhwarah-abdu-muhumuza-0340321b9/" target="_blank">Author's Profile</a>
         </footer>
         
          <!-- the content of the main goes here -->
